fix bugs that prevents source code generation.
Change-Id: I8fd90b8e298d780638009da1f1d9082b3e9e77ee

--- a/builgen/build.xml
+++ b/builgen/build.xml
@@ -3,7 +3,7 @@
 		<mkdir dir="target"/>
 	</target>
 	<target name="dist" depends="init">
-		<jar destfile="target/builgen.jar" basedir="bin">
+		<jar destfile="target/builgen2.jar" basedir="bin">
 			<include name="**/*"/>
 		</jar>
 	</target>
